--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ label {
     padding-right: 15px;
 }
 
+.dropdown {
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .btn {
     margin-left: auto;
     margin-right: 0px;
