--- a/style.css
+++ b/style.css
@@ -77,3 +77,8 @@ label {
 .slider-handle {
     background: #2980b9;
 }
+
+.slider.slider-horizontal {
+    width: 100%; 
+    margin-right: 30px;
+}
