--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@ html, body {
     padding-bottom: 15px;
     padding-left: 15px;
     padding-right: 15px;
-	background: #2c3e50;
+    background: #2c3e50;
+    
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .padding-0 {
