--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ html, body {
     padding-left:0;
 }
 
+.padding-5 {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.padding-10 {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 label {
     color: white;
 }
@@ -51,15 +61,13 @@ label {
 .form-check {
     padding-top: 3px;
     padding-bottom: 3px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5;
+    padding-right: 5px;
 }
 
 .dropdown {
     padding-top: 3px;
     padding-bottom: 3px;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .btn {
