--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 100%;
     min-height: 100%;
     display: block;
-    background: #34495e;
+    background: #F5F5F5;
 }
 
 html, body {
