--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ html, body {
     padding-left:0;
 }
 
+.padding-2 {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
 .padding-5 {
     padding-right: 5px;
     padding-left: 5px;
